# colreg-assistant

./: .gitignore  .vercelignore  README.md  docker-compose.yml  requirements.txt
.claude/: CLAUDE.md  before_backend_available.md  frontend_plan.md  plan.md  settings.local.json
backend/: .env.example  .vercelignore  Dockerfile  Pipfile  app.py  ingestion.py  pyproject.toml  requirements.txt  vercel.json
backend/scripts/: ingest_rules.py
backend/src/: config.py  main.py
backend/src/api/: routes.py
backend/src/data/: __init__.py  extended_content.json  rules.py  visual_catalog.py
backend/src/graph/: nodes.py  state.py  workflow.py
backend/src/ingestion/: ingest.py
backend/src/models/: __init__.py  extraction.py
backend/src/services/: chat_history.py  embeddings.py  llm.py  rag_retrieval.py  retriever.py  rule_matcher.py  stream_parser.py
frontend/: config.js  index.html  package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/sounds/: page.tsx
frontend/app/visuals/: page.tsx
frontend/app/visuals-demo/: page.tsx
frontend/components/: Chat.tsx  ChatInput.tsx  MessageBubble.tsx  MessageList.tsx  Navigation.tsx  SuggestedQuestions.tsx
frontend/components/ui/: ParticleBackground.tsx
frontend/components/visuals/: DayShapes.tsx  LightArcs.tsx  MorseSignal.tsx  SoundSignal.tsx  index.ts  (+2 more)
frontend/css/: styles.css
frontend/hooks/: useIsMobile.ts  useVoiceRecorder.ts
frontend/js/: script.js
frontend/lib/: api.ts
frontend/types/: index.ts
nginx/: colreg.conf
setup/: nginx-setup.sh
supabase/migrations/: 001_rule_embeddings.sql
(+1 files in other folders)
