[project]
name = "colreg-assistant"
version = "0.2.0"
description = "COLREG Assistant - Maritime navigation chatbot with rule-based extraction"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "langgraph>=0.2.59",
    "langchain-core>=0.3.29",
    "supabase>=2.12.0",
    "litellm>=1.50.0",
    "rapidfuzz>=3.0.0",
    "python-dotenv>=1.0.1",
    "loguru>=0.7.3",
    "pydantic-settings>=2.0.0",
]

[project.optional-dependencies]
dev = ["uvicorn[standard]>=0.32.0"]

# Vercel deployment: points to FastAPI app
[project.scripts]
app = "src.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
